# tomo

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  dev.sh  diesel.toml
.github/: .config.js
.github/workflows/: build.yml  changelog-preview.yml  patch-version.yml  pull-request.yml  release.yml
docs/dev/: commits.md  ui-tui-layout.md
docs/diagrams/: db-erd.mmd  errors.mmd  ui-base-classdiagram.mmd  ui-base-lifecycle.mmd  ui-classdiagram.mmd  ui-lifecycle.mmd  ui-tui-classdiagram.mmd  ui-tui-lifecycle.mmd
migrations/2026-04-22-120416-0000_initial-schema/: down.sql  up.sql
src/: cli.rs  config.rs  error.rs  lib.rs  log.rs  main.rs  repo.rs  ui.rs  utils.rs
src/config/: mod.rs  pomodoro.rs
src/models/: mod.rs  pomodoro.rs
src/repo/: error.rs  mod.rs  model.rs  schema.rs  sqlite.rs  traits.rs
src/service/: alarm.rs  traits.rs
src/services/: alarm.rs  cmd_runner.rs  mod.rs  notify.rs  sound.rs  traits.rs
src/ui/: app.rs  controller.rs  error.rs  mod.rs  prelude.rs  router.rs  traits.rs  tui.rs  view.rs
src/ui/model/: settings.rs  timer.rs
src/ui/pages/: settings.rs  timer.rs
src/ui/tui/: backend.rs  input.rs  mod.rs  renderer.rs  runner.rs  toasts.rs  view.rs
src/ui/tui/model/: mod.rs  settings.rs  timer.rs
src/ui/tui/renderer/: mod.rs  settings.rs  timer.rs
src/ui/tui/view/: mod.rs  settings.rs  timer.rs
src/ui/update/: config.rs  mod.rs  pomo.rs  settings.rs  timer.rs
tests/: db.rs
