[package]
name = "tomo"
# Version will be updated by CI in `release` branch.
# Avoid modifying version manually or it will break CI


version = "0.1.2"


edition = "2024"

[lints.clippy]
new_without_default = "allow"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
figlet-rs = "1.0.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tui-widgets = "0.7.2"
