[package]
name = "tomo"
# Version will be updated by CI in `release` branch.
# Avoid modifying version manually or it will break CI
# DO NOT remove the spaces


version = "0.1.0"


edition = "2024"

[lints.clippy]
new_without_default = "allow"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
diesel = { version = "2.3.7", features = ["chrono", "r2d2", "returning_clauses_for_sqlite_3_35", "sqlite"] }
diesel_migrations = "2.3.1"
figlet-rs = "1.0.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
thiserror = "2.0.18"
tui-widgets = "0.7.2"
